--- a/demo-real-estate-properties-detail copy.html
+++ b/demo-real-estate-properties-detail copy.html
@@ -1,48 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-
+	<head>
 		<!-- Basic -->
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-
-		<title>Porto - Multipurpose Website Template</title>	
-
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Porto - Multipurpose Website Template</title>	
 		<meta name="keywords" content="WebSite Template" />
 		<meta name="description" content="Porto - Multipurpose Website Template">
-		<meta name="author" content="okler.net">
-
+		<meta name="author" content="okler.net">
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-
+		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 		<!-- Mobile Metas -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
-
-		<!-- Web Fonts  -->
-		<link id="googleFonts" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800%7CShadows+Into+Light&display=swap" rel="stylesheet" type="text/css">
-
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
+		<!-- Web Fonts  -->		<link id="googleFonts" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800%7CShadows+Into+Light&display=swap" rel="stylesheet" type="text/css">
 		<!-- Vendor CSS -->
-		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css">
-		<link rel="stylesheet" href="vendor/animate/animate.compat.css">
-		<link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">
-		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">
-		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">
-		<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
-
+		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">		<link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css">		<link rel="stylesheet" href="vendor/animate/animate.compat.css">		<link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">		<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
 		<!-- Theme CSS -->
 		<link rel="stylesheet" href="css/theme.css">
 		<link rel="stylesheet" href="css/theme-elements.css">
 		<link rel="stylesheet" href="css/theme-blog.css">
 		<link rel="stylesheet" href="css/theme-shop.css">
 
-		<!-- Demo CSS -->
-		<link rel="stylesheet" href="css/demos/demo-real-estate.css">
-
-		<!-- Skin CSS -->
-		<link id="skinCSS" rel="stylesheet" href="css/skins/skin-real-estate.css">
-
+		<!-- Demo CSS -->		<link rel="stylesheet" href="css/demos/demo-real-estate.css">
+		<!-- Skin CSS -->		<link id="skinCSS" rel="stylesheet" href="css/skins/skin-real-estate.css">
 		<!-- Theme Custom CSS -->
 		<link rel="stylesheet" href="css/custom.css">
 
@@ -54,8 +35,7 @@
 				<div class="bounce2"></div>
 				<div class="bounce3"></div>
 			</div>
-		</div>
-
+		</div>
 		<div class="body">
 			<header id="header" class="header-effect-shrink" data-plugin-options="{'stickyEnabled': true, 'stickyEffect': 'shrink', 'stickyEnableOnBoxed': true, 'stickyEnableOnMobile': false, 'stickyChangeLogo': true, 'stickyStartAt': 120, 'stickyHeaderContainerHeight': 70}">
 				<div class="header-body border-top-0">
@@ -309,10 +289,8 @@
 						</div>
 					</div>
 				</div>
-			</header>
-
-			<div role="main" class="main">
-
+			</header>
+			<div role="main" class="main">
 				<section class="page-header page-header-modern bg-color-primary border-0 m-0">
 					<div class="container position-relative z-index-2">
 						<div class="row text-center text-md-start py-5">
@@ -327,17 +305,13 @@
 								</ul>
 							</div>
 						</div>
-					</div>
-
-				</section>
-
+					</div>
+				</section>
 				<div class="container py-5 my-3">
 					<div class="row">
-						<div class="col-lg-9">
-
+						<div class="col-lg-9">
 							<div class="row">
-								<div class="col-lg-7">
-
+								<div class="col-lg-7">
 									<div class="thumb-gallery">
 										<div class="lightbox" data-plugin-options="{'delegate': 'a', 'type': 'image', 'gallery': {'enabled': true}}">
 											<div class="owl-carousel owl-theme manual thumb-gallery-detail show-nav-hover" id="thumbGalleryDetail">
@@ -390,8 +364,7 @@
 													</a>
 												</div>
 											</div>
-										</div>
-
+										</div>
 										<div class="owl-carousel owl-theme manual thumb-gallery-thumbs mt" id="thumbGalleryThumbs">
 											<div class="border-radius overflow-hidden">
 												<img alt="Property Detail" src="img/demos/real-estate/listing/listing-detail-1-thumb.jpg" class="img-fluid cur-pointer">
@@ -406,11 +379,9 @@
 												<img alt="Property Detail" src="img/demos/real-estate/listing/listing-detail-4-thumb.jpg" class="img-fluid cur-pointer">
 											</div>
 										</div>
-									</div>
-
+									</div>
 								</div>
-								<div class="col-lg-5">
-
+								<div class="col-lg-5">
 									<div class="border-radius overflow-hidden">
 										<table class="table table-striped">
 											<colgroup>
@@ -500,23 +471,16 @@
 												</tr>
 											</tbody>
 										</table>
-									</div>
-
+									</div>
 								</div>
-							</div>
-
+							</div>
 							<div class="row">
-								<div class="col">
-
+								<div class="col">
 									<h3 class="mt-5 mb-3">Description</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
-
-									<p>Ctrices posuere cubilia Curae; In eu libero ligula. Fusce eget metus lorem, ac feugiat nibh adipiscing sit amet. In eu juiverra leo. Vestibulum ante ipsum primis in faucibus orci.</p>
-
-									<hr class="solid my-5">
-
-									<h3 class="mt-5 mb-3">Features</h3>
-
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+									<p>Ctrices posuere cubilia Curae; In eu libero ligula. Fusce eget metus lorem, ac feugiat nibh adipiscing sit amet. In eu juiverra leo. Vestibulum ante ipsum primis in faucibus orci.</p>
+									<hr class="solid my-5">
+									<h3 class="mt-5 mb-3">Features</h3>
 									<ul class="list list-icons list-secondary row m-0">
 										<li class="col-sm-6 col-lg-4"><i class="fas fa-check"></i> Air conditioning <a href="#" data-bs-toggle="tooltip" data-bs-animation="false" data-bs-placement="top" title="+ Central Heating"><i class="fas fa-info-circle"></i></a></li>
 										<li class="col-sm-6 col-lg-4"><i class="fas fa-check"></i> Home Theater</li>
@@ -530,122 +494,23 @@
 										<li class="col-sm-6 col-lg-4"><i class="fas fa-check"></i> Deck</li>
 										<li class="col-sm-6 col-lg-4"><i class="fas fa-check"></i> Gym</li>
 										<li class="col-sm-6 col-lg-4"><i class="fas fa-check"></i> Ocean View</li>
-									</ul>
-
-									<hr class="solid my-5">
-
+									</ul>
+									<hr class="solid my-5">
 									<div id="map">
 										<h3 class="mt-5 mb-3">Map Location</h3>
 										<div class="border-radius overflow-hidden mt-0 mb-4">
 											<div id="googlemaps" class="google-map m-0"></div>
 										</div>
-									</div>
-
+									</div>
 								</div>
-							</div>
-
+							</div>
 						</div>
 						<div class="col-lg-3">
 							<div class="row">
 								<div class="col-12 col-sm-6 col-lg-12">
-									
-									<div class="border-radius overflow-hidden">
-										<table class="table table-striped">
-											<colgroup>
-												<col width="35%">
-												<col width="65%">
-											</colgroup>
-											<tbody>
-												<tr>
-													<td class="bg-color-secondary text-light align-middle font-weight-semibold">
-														Price
-													</td>
-													<td class="text-4 font-weight-bold align-middle bg-color-secondary text-light">
-														$3,595,000
-													</td>
-												</tr>
-												<tr>
-													<td class="font-weight-semibold">
-														Listing ID
-													</td>
-													<td>
-														#123456
-													</td>
-												</tr>
-												<tr>
-													<td class="font-weight-semibold">
-														Address
-													</td>
-													<td>
-														1234 SW 63rd Ave - South Miami - Florida<br><a href="#map" class="text-2" data-hash data-hash-offset="0" data-hash-offset-lg="100">(Map Location)</a>
-													</td>
-												</tr>
-												<tr>
-													<td class="font-weight-semibold">
-														Neighborhood
-													</td>
-													<td>
-														Porto Village
-													</td>
-												</tr>
-												<tr>
-													<td class="font-weight-semibold">
-														Beds
-													</td>
-													<td>
-														7
-													</td>
-												</tr>
-												<tr>
-													<td class="font-weight-semibold">
-														Baths
-													</td>
-													<td>
-														8
-													</td>
-												</tr>
-												<tr>
-													<td class="font-weight-semibold">
-														Garages
-													</td>
-													<td>
-														2
-													</td>
-												</tr>
-												<tr>
-													<td class="font-weight-semibold">
-														Living Area
-													</td>
-													<td>
-														8,000
-													</td>
-												</tr>
-												<tr>
-													<td class="font-weight-semibold">
-														Lot Size
-													</td>
-													<td>
-														20,000
-													</td>
-												</tr>
-												<tr>
-													<td class="font-weight-semibold">
-														Year Built
-													</td>
-													<td>
-														1999
-													</td>
-												</tr>
-											</tbody>
-										</table>
-									</div>
-
-
-
 									<div class="card custom-card-info custom-card-info-shadow bg-color-primary text-color-light border-0 mb-4">
 										<div class="card-body bg-transparent p-relative p-4 my-2 text-center z-index-1">
-											<h3 class="text-color-light font-weight-semibold text-5 d-block mb-4">Our Agents</h3>
-
+											<h3 class="text-color-light font-weight-semibold text-5 d-block mb-4">Our Agents</h3>
 											<div class="owl-carousel owl-theme dots-light mb-0 pb-0" data-plugin-options="{'items': 1, 'autoplay': true, 'autoplayTimeout': 5000, 'margin': 10}">
 												<div>
 													<a href="demo-real-estate-agents-detail.html" class="text-decoration-none">
@@ -674,8 +539,7 @@
 											</div>
 										</div>
 									</div>
-								</div>
-
+								</div>
 								<div class="col-12 col-sm-6 col-lg-12">
 									<h3 class="mt-2 mb-3 font-weight-semibold text-5">Related Properties</h3>
 									<div class="owl-carousel owl-theme mb-0 pb-4" data-plugin-options="{'items': 1, 'autoplay': true, 'autoplayTimeout': 5000, 'margin': 10}">
@@ -767,27 +631,22 @@
 											</div>
 										</div>
 									</div>
-								</div>
-
+								</div>
 								<div class="col-12">
 									<div class="card custom-card-info bg-color-quaternary border-0 mb-4">
 										<div class="card-body bg-transparent p-relative p-4 m-2 z-index-1">
-											<h3 class="text-color-dark font-weight-semibold text-5 d-block mt-1 mb-2">Contact Us</h3>
-
+											<h3 class="text-color-dark font-weight-semibold text-5 d-block mt-1 mb-2">Contact Us</h3>
 											<p>
 												We help you choose your property and any other question.
-											</p>
-
+											</p>
 											<form class="contact-form form-style-3" action="php/contact-form.php" method="POST">
 											    <div class="contact-form-success alert alert-success d-none mt-4">
 											        <strong>Success!</strong> Your message has been sent to us.
-											    </div>
-
+											    </div>
 											    <div class="contact-form-error alert alert-danger d-none mt-4">
 											        <strong>Error!</strong> There was an error sending your message.
 											        <span class="mail-error-message text-1 d-block"></span>
-											    </div>
-
+											    </div>
 											    <div class="row">
 											        <div class="form-group mb-2">
 											            <input type="text" value="" data-msg-required="Please enter your name." maxlength="100" class="form-control bg-color-light box-shadow-none border-0" name="name" id="name" required placeholder="Name *">
@@ -815,16 +674,14 @@
 											            </div>
 											        </div>
 											    </div>
-											</form>
-
+											</form>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-
+				</div>
 				<section class="section section-height-3 bg-secondary border-0 m-0">
 					<div class="container">
 						<div class="row align-items-center">
@@ -841,8 +698,7 @@
 							</div>
 						</div>
 					</div>
-				</section>
-
+				</section>
 				<footer id="footer" class="m-0">
 					<div class="container py-3">
 						<div class="row py-5">
@@ -920,36 +776,27 @@
 			</div>
 		</div>
 
-		<!-- Vendor -->
-		<script src="vendor/plugins/js/plugins.min.js"></script>
-
+		<!-- Vendor -->		<script src="vendor/plugins/js/plugins.min.js"></script>
 		<!-- Theme Base, Components and Settings -->
 		<script src="js/theme.js"></script>
 
 		<!-- Current Page Vendor and Views -->
-		<script src="js/views/view.contact.js"></script>
-
+		<script src="js/views/view.contact.js"></script>
 		<!-- Demo -->
 		<script src="js/demos/demo-real-estate.js"></script>
 
-		<!-- Theme Custom -->
-		<script src="js/custom.js"></script>
-
+		<!-- Theme Custom -->		<script src="js/custom.js"></script>
 		<!-- Theme Initialization Files -->
 		<script src="js/theme.init.js"></script>
 
 	<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
-		<script>
-
+		<script>
 			/*
-			Map Settings
-
+			Map Settings
 				Find the Latitude and Longitude of your address:
 					- https://www.latlong.net/
-					- http://www.findlatitudeandlongitude.com/find-address-from-latitude-and-longitude/
-
-			*/
-
+					- http://www.findlatitudeandlongitude.com/find-address-from-latitude-and-longitude/
+			*/
 			function initializeGoogleMaps() {
 				// Map Markers
 				var mapMarkers = [{
@@ -961,12 +808,10 @@
 						iconanchor: [12, 46]
 					},
 					popup: true
-				}];
-
+				}];
 				// Map Initial Location
 				var initLatitude = 40.75198;
-				var initLongitude = -73.96978;
-
+				var initLongitude = -73.96978;
 				// Map Extended Settings
 				var mapSettings = {
 					controls: {
@@ -983,14 +828,11 @@
 					latitude: initLatitude,
 					longitude: initLongitude,
 					zoom: 16
-				};
-
+				};
 				var map = $('#googlemaps').gMap(mapSettings),
-					mapRef = $('#googlemaps').data('gMap.reference');
-
+					mapRef = $('#googlemaps').data('gMap.reference');
 				// Create an array of styles.
-				var mapColor = "#c69d66";
-
+				var mapColor = "#c69d66";
 				var styles = [{
 					stylers: [{
 						hue: mapColor
@@ -1009,29 +851,22 @@
 					stylers: [{
 						visibility: "off"
 					}]
-				}];
-
+				}];
 				// Styles from https://snazzymaps.com/
-				var styles = [{"featureType":"water","elementType":"geometry","stylers":[{"color":"#e9e9e9"},{"lightness":17}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":20}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#ffffff"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#ffffff"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":16}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":21}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#dedede"},{"lightness":21}]},{"elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#ffffff"},{"lightness":16}]},{"elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#333333"},{"lightness":40}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#f2f2f2"},{"lightness":19}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#fefefe"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#fefefe"},{"lightness":17},{"weight":1.2}]}];
-
+				var styles = [{"featureType":"water","elementType":"geometry","stylers":[{"color":"#e9e9e9"},{"lightness":17}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":20}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#ffffff"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#ffffff"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":16}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":21}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#dedede"},{"lightness":21}]},{"elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#ffffff"},{"lightness":16}]},{"elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#333333"},{"lightness":40}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#f2f2f2"},{"lightness":19}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#fefefe"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#fefefe"},{"lightness":17},{"weight":1.2}]}];
 				var styledMap = new google.maps.StyledMapType(styles, {
 					name: 'Styled Map'
-				});
-
+				});
 				mapRef.mapTypes.set('map_style', styledMap);
 				mapRef.setMapTypeId('map_style');
-			}
-
+			}
 			// Initialize Google Maps when element enter on browser view
-			theme.fn.intObs( '.google-map', 'initializeGoogleMaps()', {} );
-
+			theme.fn.intObs( '.google-map', 'initializeGoogleMaps()', {} );
 			// Map text-center At
 			var mapCenterAt = function(options, e) {
 				e.preventDefault();
 				$('#googlemaps').gMap("centerAt", options);
-			}
-
-		</script>
-
+			}
+		</script>
 	</body>
 </html>
