property detail updated

--- a/property-detail.html
+++ b/property-detail.html
@@ -154,11 +154,12 @@
 			
 			<div role="main" class="main">
 
+								
 				<section class="page-header page-header-modern bg-color-primary border-0 m-0">
 					<div class="container position-relative z-index-2">
-						<div class="row text-center text-md-start py-5">
+						<div class="row text-center text-md-start py-2">
 							<div class="col-md-8 order-2 order-md-1 align-self-center p-static">
-								<h1 class="font-weight-bold text-color-light text-8 mb-0">Lampton Parkside</h1>
+								<h1 class="text-color-light text-8 mb-0">Lampton Parkside</h1>
 								<p class="text-color-light opacity-7 mb-0">Lampton Road TW3 4FD</p>
 							</div>
 							<div class="col-md-4 order-1 order-md-2 align-self-center">
@@ -666,7 +667,7 @@
 					</div>
 				</div>
 
-				<section class="section section-height-3 bg-secondary border-0 m-0">
+				<!-- <section class="section section-height-3 bg-secondary border-0 m-0">
 					<div class="container">
 						<div class="row align-items-center">
 							<div class="col-lg-9 text-center text-lg-start mb-4 mb-lg-0">
@@ -682,7 +683,7 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section> -->
 
 				<footer id="footer" class="m-0">
 					<div class="container py-3">
@@ -782,8 +783,8 @@
 			function initializeGoogleMaps() {
 				// Map Markers
 				var mapMarkers = [{
-					address: "New York, NY 10017",
-					html: "<strong>Porto Real Estate</strong>",
+					address: "Lampton Parkside, Lampton Road, London TW3 4FD",
+					html: "<strong>Lampton Parkside</strong>",
 					icon: {
 						image: "img/pin.png",
 						iconsize: [26, 46],
