--- a/property-detail.html
+++ b/property-detail.html
@@ -180,7 +180,76 @@
 							<div class="row">
 								<div class="col-lg-12">
 
-									
+									<div class="thumb-gallery">
+										<div class="lightbox" data-plugin-options="{'delegate': 'a', 'type': 'image', 'gallery': {'enabled': true}}">
+											<div class="owl-carousel owl-theme manual thumb-gallery-detail show-nav-hover" id="thumbGalleryDetail">
+												<div class="border-radius overflow-hidden">
+													<a href="img/demos/real-estate/listing/listing-detail-1.jpg">
+														<span class="thumb-info thumb-info-centered-info thumb-info-no-borders text-4">
+															<span class="thumb-info-wrapper text-4">
+																<img alt="Property Detail" src="img/project-thumbs/listing-1-thumb.jpg" class="img-fluid">
+																<span class="thumb-info-title text-4">
+																	<span class="thumb-info-inner text-4"><i class="icon-magnifier icons text-4"></i></span>
+																</span>
+															</span>
+														</span>
+													</a>
+												</div>
+												<div class="border-radius overflow-hidden">
+													<a href="img/demos/real-estate/listing/listing-detail-2.jpg">
+														<span class="thumb-info thumb-info-centered-info thumb-info-no-borders text-4">
+															<span class="thumb-info-wrapper text-4">
+																<img alt="Property Detail" src="img/project-thumbs/listing-1-thumb.jpg" class="img-fluid">
+																<!-- <img alt="Property Detail" src="img/demos/real-estate/listing/listing-detail-2.jpg" class="img-fluid"> -->
+																<span class="thumb-info-title text-4">
+																	<span class="thumb-info-inner text-4"><i class="icon-magnifier icons text-4"></i></span>
+																</span>
+															</span>
+														</span>
+													</a>
+												</div>
+												<div class="border-radius overflow-hidden">
+													<a href="img/demos/real-estate/listing/listing-detail-3.jpg">
+														<span class="thumb-info thumb-info-centered-info thumb-info-no-borders text-4">
+															<span class="thumb-info-wrapper text-4">
+																<img alt="Property Detail" src="img/project-thumbs/listing-1-thumb.jpg" class="img-fluid">
+																<span class="thumb-info-title text-4">
+																	<span class="thumb-info-inner text-4"><i class="icon-magnifier icons text-4"></i></span>
+																</span>
+															</span>
+														</span>
+													</a>
+												</div>
+												<div class="border-radius overflow-hidden">
+													<a href="img/demos/real-estate/listing/listing-detail-4.jpg">
+														<span class="thumb-info thumb-info-centered-info thumb-info-no-borders text-4">
+															<span class="thumb-info-wrapper text-4">
+																<img alt="Property Detail" src="img/project-thumbs/listing-1-thumb.jpg" class="img-fluid">
+																<span class="thumb-info-title text-4">
+																	<span class="thumb-info-inner text-4"><i class="icon-magnifier icons text-4"></i></span>
+																</span>
+															</span>
+														</span>
+													</a>
+												</div>
+											</div>
+										</div>
+
+										<!-- <div class="owl-carousel owl-theme manual thumb-gallery-thumbs mt" id="thumbGalleryThumbs">
+											<div class="border-radius overflow-hidden">
+												<img alt="Property Detail" src="img/demos/real-estate/listing/listing-detail-1-thumb.jpg" class="img-fluid cur-pointer">
+											</div>
+											<div class="border-radius overflow-hidden">
+												<img alt="Property Detail" src="img/demos/real-estate/listing/listing-detail-2-thumb.jpg" class="img-fluid cur-pointer">
+											</div>
+											<div class="border-radius overflow-hidden">
+												<img alt="Property Detail" src="img/demos/real-estate/listing/listing-detail-3-thumb.jpg" class="img-fluid cur-pointer">
+											</div>
+											<div class="border-radius overflow-hidden">
+												<img alt="Property Detail" src="img/demos/real-estate/listing/listing-detail-4-thumb.jpg" class="img-fluid cur-pointer">
+											</div>
+										</div> -->
+									</div>
 
 									<a href="#" class="mb-1 mt-1 me-1 btn btn-primary">View on map <i class="fas fa-arrow-right ms-1"></i> </a>
 
