--- a/index.html
+++ b/index.html
@@ -747,12 +747,17 @@
 									<ul class="list-unstyled mb-0">
 										<li>
 											<a href="#" class="custom-color-2 text-decoration-none">
-												About
+												Central London
 											</a>
 										</li>
 										<li>
 											<a href="#" class="custom-color-2 text-decoration-none">
-												Contact
+												South London
+											</a>
+										</li>
+										<li>
+											<a href="#" class="custom-color-2 text-decoration-none">
+												North London
 											</a>
 										</li>
 									</ul>
@@ -765,7 +770,7 @@
 						<div class="container">
 							<div class="row ">
 								<div class="col text-center py-4">
-									<p>© BuyNewHome Copyright 2024. All Rights Reserved.</p>
+									<p>© BuyNewHome Copyright 2024. All Rights Reserved. BuyNewHome is a service provided by <a href="#" class="custom-color-2 text-decoration-none">Whitehall Consulting Partners.</a></p>
 								</div>
 							</div>
 						</div>
