--- a/index.html
+++ b/index.html
@@ -730,23 +730,6 @@
 									<ul class="list-unstyled mb-0">
 										<li>
 											<a href="#" class="custom-color-2 text-decoration-none">
-												For Sale
-											</a>
-										</li>
-										<li>
-											<a href="#" class="custom-color-2 text-decoration-none">
-												For Rent
-											</a>
-										</li>
-									</ul>
-								</nav>
-							</div>
-							<div class="col-md-2">
-								<h4 class="mb-3">Links</h4>
-								<nav class="nav-footer">
-									<ul class="list-unstyled mb-0">
-										<li>
-											<a href="#" class="custom-color-2 text-decoration-none">
 												Central London
 											</a>
 										</li>
@@ -758,6 +741,29 @@
 										<li>
 											<a href="#" class="custom-color-2 text-decoration-none">
 												North London
+											</a>
+										</li>
+										
+									</ul>
+								</nav>
+							</div>
+							<div class="col-md-2">
+								<h4 class="mb-3">Links</h4>
+								<nav class="nav-footer">
+									<ul class="list-unstyled mb-0">
+										<li>
+											<a href="#" class="custom-color-2 text-decoration-none">
+												Home
+											</a>
+										</li>
+										<li>
+											<a href="#" class="custom-color-2 text-decoration-none">
+												About
+											</a>
+										</li>
+										<li>
+											<a href="#" class="custom-color-2 text-decoration-none">
+												Contact
 											</a>
 										</li>
 									</ul>
