--- a/property-detail.html
+++ b/property-detail.html
@@ -698,14 +698,20 @@
 									<ul class="list-unstyled mb-0">
 										<li>
 											<a href="#" class="custom-color-2 text-decoration-none">
-												For Sale
+												Central London
 											</a>
 										</li>
 										<li>
 											<a href="#" class="custom-color-2 text-decoration-none">
-												For Rent
+												South London
 											</a>
 										</li>
+										<li>
+											<a href="#" class="custom-color-2 text-decoration-none">
+												North London
+											</a>
+										</li>
+										
 									</ul>
 								</nav>
 							</div>
@@ -713,6 +719,11 @@
 								<h4 class="mb-3">Links</h4>
 								<nav class="nav-footer">
 									<ul class="list-unstyled mb-0">
+										<li>
+											<a href="#" class="custom-color-2 text-decoration-none">
+												Home
+											</a>
+										</li>
 										<li>
 											<a href="#" class="custom-color-2 text-decoration-none">
 												About
@@ -733,7 +744,7 @@
 						<div class="container">
 							<div class="row ">
 								<div class="col text-center py-4">
-									<p>© BuyNewHome Copyright 2024. All Rights Reserved.</p>
+									<p>© BuyNewHome Copyright 2024. All Rights Reserved. BuyNewHome is a service provided by <a href="#" class="custom-color-2 text-decoration-none">Whitehall Consulting Partners.</a></p>
 								</div>
 							</div>
 						</div>
