--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>About | BuyNewHome</title>	
+		<title>Projects | BuyNewHome</title>	
 
 		<meta name="keywords" content="buy new home project property" />
 		<meta name="description" content="BuyNewHome Website">
