--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="#">
+														<a class="nav-link" href="projects.html">
 															Projects
 														</a>
 													</li>
